--- a/src/main/resources/templates/livros/index.html
+++ b/src/main/resources/templates/livros/index.html
@@ -14,10 +14,10 @@
 		
 		<ul class="nav breadcrumb">
 			<li class="nav-item">
-				<a class="nav-link" href="#" th:href="@{/autor/list}">Autores</a>
+				<a class="nav-link" href="#" th:href="@{/autor/index}">Autores</a>
 			</li>
 			<li class="nav-item">
-				<a class="nav-link" href="#" th:href="@{/livros/list}">Livros</a>
+				<a class="nav-link" href="#" th:href="@{/livros/index}">Livros</a>
 			</li>			
 		</ul>
 	
