--- a/src/main/resources/templates/user/index.html
+++ b/src/main/resources/templates/user/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" xmlns:form="http://www.w3.org/1999/xhtml"
+      layout:decorate="layout">
   <head>
     <meta charset="UTF-8" /> 
     <title>Biblioteca</title>
@@ -30,7 +32,7 @@
 		
 			
 		<h1 layout:fragment="header">
-    		<a th:href="@{/user/novo}" class="btn btn-sm btn-info"><i class="glyphicon glyphicon-plus"></i>Cadastrar Novo</a>
+    		<a th:href="@{/user/registration}" class="btn btn-sm btn-info"><i class="glyphicon glyphicon-plus"></i>Cadastrar Novo</a>
 		</h1>
 	
 		<table class="table table-striped table-hover">	
