--- a/src/main/resources/templates/livros/index.html
+++ b/src/main/resources/templates/livros/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
   <head>
     <meta charset="UTF-8" /> 
     <title>Biblioteca</title>
@@ -14,11 +15,20 @@
 		
 		<ul class="nav breadcrumb">
 			<li class="nav-item">
+				<a class="nav-link" href="#" th:href="@{/}">Home</a>
+			</li>
+			<li class="nav-item">
 				<a class="nav-link" href="#" th:href="@{/autor/index}">Autores</a>
 			</li>
 			<li class="nav-item">
 				<a class="nav-link" href="#" th:href="@{/livros/index}">Livros</a>
-			</li>			
+			</li>	
+			<li class="nav-item">
+				<a class="nav-link" href="#" th:href="@{/user/index}">Usuários</a>
+			</li>	
+			<li class="nav-item">
+				<a class="nav-link" href="#" th:href="@{/user/logout}">Sair</a>
+			</li>	
 		</ul>
 	
 	    <nav aria-label="breadcrumb">
@@ -45,8 +55,8 @@
 				<td> <a th:href="@{'livros/livro/'+${livro.id}}" th:text="${livro.id}"></td>
 				<td th:text="${livro.nome}"></td>		
 				<td>
-					<a class="btn btn-sm btn-info" style="width:100px" th:href="@{'/livros/alterar/'+${livro.id}}">Alterar</a>
-				    <a class="btn btn-sm btn-danger" style="width:100px" th:href="@{'/livros/excluir/'+${livro.id}}">Excluir</a>
+					<a sec:authorize="hasAuthority('ROLE_ADMIN')" class="btn btn-sm btn-info" style="width:100px" th:href="@{'/livros/alterar/'+${livro.id}}">Alterar</a>
+				    <a sec:authorize="hasAuthority('ROLE_ADMIN')" class="btn btn-sm btn-danger" style="width:100px" th:href="@{'/livros/excluir/'+${livro.id}}">Excluir</a>
 				</td>		
 				
 			</tr>
