--- a/src/main/resources/templates/user/index.html
+++ b/src/main/resources/templates/user/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
-      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" xmlns:form="http://www.w3.org/1999/xhtml"
-      layout:decorate="layout">
+	  xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" xmlns:form="http://www.w3.org/1999/xhtml"
+      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
   <head>
     <meta charset="UTF-8" /> 
     <title>Biblioteca</title>
@@ -11,16 +11,25 @@
 <body>
 	<div class="container">
 		<div class="jumbotron text-center">
-	  		<h1>Biblioteca</h1>
-		</div>
+			<h1>Biblioteca</h1>
+	  	</div>
 		
 		<ul class="nav breadcrumb">
+			<li class="nav-item">
+				<a class="nav-link" href="#" th:href="@{/}">Home</a>
+			</li>
 			<li class="nav-item">
 				<a class="nav-link" href="#" th:href="@{/autor/index}">Autores</a>
 			</li>
 			<li class="nav-item">
 				<a class="nav-link" href="#" th:href="@{/livros/index}">Livros</a>
-			</li>			
+			</li>		
+			<li class="nav-item">
+				<a class="nav-link" href="#" th:href="@{/user/index}">Usuários</a>
+			</li>	
+			<li class="nav-item">
+				<a class="nav-link" href="#" th:href="@{/user/logout}">Sair</a>
+			</li>
 		</ul>
 	
 	    <nav aria-label="breadcrumb">
@@ -32,7 +41,7 @@
 		
 			
 		<h1 layout:fragment="header">
-    		<a th:href="@{/user/registration}" class="btn btn-sm btn-info"><i class="glyphicon glyphicon-plus"></i>Cadastrar Novo</a>
+    		<a th:href="@{/user/register}" class="btn btn-sm btn-info"><i class="glyphicon glyphicon-plus"></i>Cadastrar Novo</a>
 		</h1>
 	
 		<table class="table table-striped table-hover">	
