--- a/src/main/resources/templates/autor/index.html
+++ b/src/main/resources/templates/autor/index.html
@@ -22,9 +22,12 @@
 			<li class="nav-item">
 				<a class="nav-link" href="#" th:href="@{/livros/index}">Livros</a>
 			</li>			
-			<li class="nav-item">
-				<a class="nav-link" href="#" th:href="@{/user/index}">Usuários</a>
-			</li>
+			<li class="nav-item" sec:authorize="hasAuthority('ROLE_BASIC')">
+				<a  class="nav-link" href="#" th:href="@{/user/alterarusuario}">Usuário</a>
+			</li>	
+			<li class="nav-item" sec:authorize="hasAuthority('ROLE_ADMIN')">
+				<a  class="nav-link" href="#" th:href="@{/user/index}">Gerenciar Usuários</a>
+			</li>	
 			<li class="nav-item">
 				<a class="nav-link" href="#" th:href="@{/user/logout}">Sair</a>
 			</li>
@@ -37,22 +40,21 @@
 		</nav>
 		
 		<h1 layout:fragment="header">
-    		<a th:href="@{autor/novo}" class="btn btn-sm btn-info"><i class="glyphicon glyphicon-plus"></i>Cadastrar Novo</a>
+    		<a sec:authorize="hasAuthority('ROLE_ADMIN')" th:href="@{/autor/novo}" class="btn btn-sm btn-info"><i class="glyphicon glyphicon-plus"></i>Cadastrar Novo</a>
 		</h1>
 		
 		<table class="table table-striped table-hover">
 			<thead>
 				<th style="width:100px">ID</th>
-				<th style="width:600px">Nome</th>
-				<th style="width:200px"></th>
+				<th style="width:800px">Nome</th>
+				<th style="width:250px"></th>
 			</thead>
 			<tr th:each="autor : ${listaDeAutores}">
 				<td th:text="${autor.id}"></td>
 				<td th:text="${autor.nome}"></td>
 				<td>
 					<a sec:authorize="hasAuthority('ROLE_ADMIN')" style="width:100px" class="btn btn-info" th:href="@{'/autor/alterar/' + ${autor.id}}">Alterar</a>
-					<a sec:authorize="hasAuthority('ROLE_ADMIN')"style="width:100px" class="btn btn-danger" th:href="@{'/autor/excluir/' + ${autor.id}}">Excluir</a>
-					
+					<a sec:authorize="hasAuthority('ROLE_ADMIN')"style="width:100px" class="btn btn-danger" th:href="@{'/autor/excluir/' + ${autor.id}}">Excluir</a>					
 				</td>
 			</tr>
 		
