--- a/src/main/resources/templates/livros/index.html
+++ b/src/main/resources/templates/livros/index.html
@@ -23,8 +23,11 @@
 			<li class="nav-item">
 				<a class="nav-link" href="#" th:href="@{/livros/index}">Livros</a>
 			</li>	
-			<li class="nav-item">
-				<a class="nav-link" href="#" th:href="@{/user/index}">Usuários</a>
+			<li class="nav-item" sec:authorize="hasAuthority('ROLE_BASIC')">
+				<a  class="nav-link" href="#" th:href="@{/user/alterarusuario}">Usuário</a>
+			</li>	
+			<li class="nav-item" sec:authorize="hasAuthority('ROLE_ADMIN')">
+				<a  class="nav-link" href="#" th:href="@{/user/index}">Gerenciar Usuários</a>
 			</li>	
 			<li class="nav-item">
 				<a class="nav-link" href="#" th:href="@{/user/logout}">Sair</a>
@@ -37,23 +40,22 @@
 			</ol>
 		</nav>
 		
-		
-			
 		<h1 layout:fragment="header">
-    		<a th:href="@{livros/novo}" class="btn btn-sm btn-info"><i class="glyphicon glyphicon-plus"></i>Cadastrar Novo</a>
+   			<a sec:authorize="hasAuthority('ROLE_ADMIN')" th:href="@{/livros/novo}" class="btn btn-sm btn-info"><i class="glyphicon glyphicon-plus"></i>Cadastrar Novo</a>
 		</h1>
-	
 		<table class="table table-striped table-hover">	
 		    <thead class="thead-light">
 			    <tr>
 			      <th scope="col" style="width:100px">ID</th>
-			      <th scope="col" style="width:600px">Título</th>
-			      <th scope="col" style="width:210px"></th>
+			      <th scope="col" style="width:800px">Título</th>
+			      <th scope="col" style="width:100px">Páginas</th>			      
+			      <th scope="col" style="width:250px"></th>
 			    </tr>
 		    </thead>
 			<tr th:each="livro : ${listaDeLivros}">
 				<td> <a th:href="@{'livros/livro/'+${livro.id}}" th:text="${livro.id}"></td>
 				<td th:text="${livro.nome}"></td>		
+				<td th:text="${livro.quantidadePaginas}"></td>
 				<td>
 					<a sec:authorize="hasAuthority('ROLE_ADMIN')" class="btn btn-sm btn-info" style="width:100px" th:href="@{'/livros/alterar/'+${livro.id}}">Alterar</a>
 				    <a sec:authorize="hasAuthority('ROLE_ADMIN')" class="btn btn-sm btn-danger" style="width:100px" th:href="@{'/livros/excluir/'+${livro.id}}">Excluir</a>
