--- a/src/main/resources/templates/user/index.html
+++ b/src/main/resources/templates/user/index.html
@@ -24,9 +24,12 @@
 			<li class="nav-item">
 				<a class="nav-link" href="#" th:href="@{/livros/index}">Livros</a>
 			</li>		
-			<li class="nav-item">
-				<a class="nav-link" href="#" th:href="@{/user/index}">Usuários</a>
+			<li class="nav-item" sec:authorize="hasAuthority('ROLE_BASIC')">
+				<a  class="nav-link" href="#" th:href="@{/user/alterarusuario}">Usuário</a>
 			</li>	
+			<li class="nav-item" sec:authorize="hasAuthority('ROLE_ADMIN')">
+				<a  class="nav-link" href="#" th:href="@{/user/index}">Gerenciar Usuários</a>
+			</li>		
 			<li class="nav-item">
 				<a class="nav-link" href="#" th:href="@{/user/logout}">Sair</a>
 			</li>
@@ -37,7 +40,6 @@
 			<li class="breadcrumb-item active" aria-current="page">Listagem de Usuários</li>
 			</ol>
 		</nav>
-		
 		
 			
 		<h1 layout:fragment="header">
