--- a/src/main/resources/templates/user/register.html
+++ b/src/main/resources/templates/user/register.html
@@ -15,11 +15,13 @@
 	
 		<nav aria-label="breadcrumb">
 			<ol class="breadcrumb">
-			<li class="breadcrumb-item active" aria-current="page">Cadastro de Usuários</li>
+				<li class="breadcrumb-item active" aria-current="page">Cadastro de Usuários</li>
 			</ol>
 		</nav>	
 	
-		<a class="btn btn-sm btn-info" href="#" th:href="@{/user/index}" style="width:150px"></i>Voltar para Lista</a>
+		<a sec:authorize="isAnonymous()" class="btn btn-sm btn-info" href="#" th:href="@{/user/login}" style="width:150px"></i>Voltar pro Login</a>
+		<a sec:authorize="hasAuthority('ROLE_BASIC')" class="btn btn-sm btn-info" href="#" th:href="@{/}" style="width:150px"></i>Voltar</a>
+		<a sec:authorize="hasAuthority('ROLE_ADMIN')" class="btn btn-sm btn-info" href="#" th:href="@{/user/index}" style="width:150px"></i>Voltar para Lista</a>
 	
 		<div layout:fragment="content" class="container">
 		    <form id="userForm" th:action="@{/user/registration}" method="post" th:object="${userForm}" action="#" >   
@@ -35,16 +37,16 @@
 			            </div>
 		            </div>
 		            
-		            <div class="form-group" style="width: 100%">
-			            <label for="staticTitulo" class="col-sm-2 col-form-label">Nível de Acesso</label>
-			            <div class="col-sm-15">
-			                <select form="userForm" th:object="${userForm}" th:field="*{role}" class="form-control">
-			                    <option value="">Nível de Acesso</option>
-			                    <option th:each="role : ${roles}" th:value="${role.id}" th:utext="${role.descricao}" selected="selected"></option>
-			                </select>
-			            </div>
-			        </div>    
-			        
+	            	<div class="form-group" style="width: 100%">
+		           		<label for="staticTitulo" class="col-sm-2 col-form-label">Nível de Acesso</label>
+		           	 	<div class="col-sm-15">
+		                	<select form="userForm" th:object="${userForm}" th:field="*{role}" class="form-control">
+		                    	<option value="">Nível de Acesso</option>
+		                    	<option th:each="role : ${roles}" th:value="${role.id}" th:utext="${role.descricao}" selected="selected"></option>
+		                	</select>
+		           		</div>
+		        	</div>    
+			       			        
 			        <div class="form-group" style="width: 100%">
 			            <label for="staticTitulo" class="col-sm-2 col-form-label">Senha</label>
 			            <div style="width: 100%">
